--- a/examples/animation/generic-logo/index.html
+++ b/examples/animation/generic-logo/index.html
@@ -23,7 +23,7 @@
           animation__position="property: position; to: 0 0 0; delay: 500; dur: 500; easing: easeOutCubic"
           animation__rotation="property: rotation; to: 30 54 36; delay: 500; dur: 1200; easing: easeOutCubic"
           scale="0 0 0" position="0 -0.5 0" rotation ="0 -300 0">
-          <a-box width="0.25" depth="0.25" height="0.25" color="#EF2D5E"></a-box>
+          <a-box width="0.45" depth="0.45" height="0.45" color="#1b019b"></a-box>
 
           <a-entity scale="0.08 0.08 0.08">
             <a-entity mixin="frame-edge" position="5 5 0" rotation="0 0 0"></a-entity>
