--- a/examples/test/video/index.html
+++ b/examples/test/video/index.html
@@ -30,7 +30,7 @@
       <a-entity material="shader: flat; src: #videoBunny"
                 geometry="primitive: plane; width: 320; height: 180;"
                 position="0 60 -250"
-                rotation="0 35 0"
+                rotation="0 +45 0"
                 play-on-click
                 visible="false">
       </a-entity>
@@ -43,8 +43,8 @@
       -->
       <a-entity material="shader: flat; src: #videoFireworks"
                 geometry="primitive: plane; width: 160; height: 90"
-                position="0 -60 -200"
-                rotation="0 -35 0"
+                position="0 -120 -200"
+                rotation="0 -45 0"
                 play-on-click
                 visible="false">
       </a-entity>
