--- a/examples/test/video/index.html
+++ b/examples/test/video/index.html
@@ -12,11 +12,11 @@
     <a-scene>
       <a-assets>
         <video id="videoBunny" preload="auto"
-               src="https://cdn.aframe.io/videos/bunny.mp4"
+               src="https://github.com/guarim/aframe/blob/master/examples/test/video/Animation.mp4"
                width="320" height="180" autoplay loop="true"
                crossOrigin="anonymous" muted></video>
         <video id="videoFireworks" preload="auto"
-               src="https://cdn.aframe.io/videos/fireworks.mp4"
+               src="https://github.com/guarim/aframe/blob/master/examples/test/video/apis.mp4"
                width="320" height="180" autoplay loop="true"
                crossOrigin="anonymous" muted></video>
       </a-assets>
