--- a/examples/showcase/link-traversal/index.html
+++ b/examples/showcase/link-traversal/index.html
@@ -20,9 +20,9 @@
       info-message="htmlSrc: #messageText">
       <a-assets>
         <a-asset-item id="messageText" src="message.html"></a-asset-item>
-       <img id="thumbJapan" crossOrigin="anonymous" src="https://cdn.aframe.io/link-traversal/thumbs/japan.png">
-       <img id="thumbEgypt" crossOrigin="anonymous" src="https://cdn.aframe.io/link-traversal/thumbs/egypt.png">
-       <img id="thumbForest" crossOrigin="anonymous" src="https://cdn.aframe.io/link-traversal/thumbs/forest.png">
+       <img id="thumbJapan" crossOrigin="anonymous" src="images/1.png">
+       <img id="thumbEgypt" crossOrigin="anonymous" src="images/2.png">
+       <img id="thumbForest" crossOrigin="anonymous" src="images/3.png">
        <a-asset-item id="messageText" src="message.html"></a-asset-item>
       </a-assets>
       <a-link href="japan.html" position="-3.5 1.5 -1.0" image="#thumbJapan"></a-link>
