--- a/examples/test/videosphere/index.html
+++ b/examples/test/videosphere/index.html
@@ -17,7 +17,7 @@
         URL:    https://bitmovin.com/demos/vr-360
         -->
         <video id="video" preload="auto"
-               src="https://bitmovin-a.akamaihd.net/content/playhouse-vr/progressive.mp4"
+               src="asset.mp4"
                autoplay loop="true"
                crossOrigin="anonymous"></video>
       </a-assets>
