--- a/examples/test/videosphere/index.html
+++ b/examples/test/videosphere/index.html
@@ -23,7 +23,7 @@
       </a-assets>
       <a-videosphere
         rotation="0 -90 0"
-        src="#video"
+        src="asset.mp4"
         visible="false"
         play-on-click>
       </a-videosphere>
