--- a/examples/test/videosphere/index.html
+++ b/examples/test/videosphere/index.html
@@ -13,8 +13,9 @@
       <a-assets>
         <!--
         SOURCE
-        Author: Bitmovin
-        URL:    https://bitmovin.com/demos/vr-360
+        Author: Warner Bros. France
+
+        URL:    https://www.youtube.com/watch?v=-_nhjmLeGYw
         -->
         <video id="video" preload="auto"
                src="asset.mp4"
