--- a/examples/boilerplate/360-video/index.html
+++ b/examples/boilerplate/360-video/index.html
@@ -14,13 +14,13 @@
         <!--
         SOURCE
         Author: Bitmovin
-        URL:    https://bitmovin.com/demos/vr-360
+        URL:    https://www.youtube.com/watch?v=5eW_q0iy55U
         -->
         <video id="video"
                loop
                crossorigin="anonymous"
                playsinline webkit-playsinline
-               src="https://bitmovin-a.akamaihd.net/content/playhouse-vr/progressive.mp4">
+               src="Conducteur.mp4">
         </video>
       </a-assets>
       <a-videosphere
