--- a/examples/boilerplate/360-video/index.html
+++ b/examples/boilerplate/360-video/index.html
@@ -14,13 +14,13 @@
         <!--
         SOURCE
         Author: Bitmovin
-        URL:    https://www.youtube.com/watch?v=5eW_q0iy55U
+        URL:    "https://www.youtube.com/embed/5eW_q0iy55U?start=19"
         -->
         <video id="video"
                loop
                crossorigin="anonymous"
                playsinline webkit-playsinline
-               src="Conducteur.mp4">
+               src="https://www.youtube.com/embed/5eW_q0iy55U?start=19">
         </video>
       </a-assets>
       <a-videosphere
