--- a/examples/boilerplate/360-video/index.html
+++ b/examples/boilerplate/360-video/index.html
@@ -14,7 +14,7 @@
         <!--
         SOURCE
         Author: Bitmovin
-        URL:    "https://www.youtube.com/embed/5eW_q0iy55U?start=19"
+        URL:    https://www.youtube.com/embed/5eW_q0iy55U?start=19
         -->
         <video id="video"
                loop
@@ -24,7 +24,7 @@
         </video>
       </a-assets>
       <a-videosphere
-        rotation="0 -90 0" src="#video"
+        rotation="0 -90 0" src="https://www.youtube.com/embed/5eW_q0iy55U?start=19""
         play-on-click>
       </a-videosphere>
 
