--- a/examples/boilerplate/360-video/index.html
+++ b/examples/boilerplate/360-video/index.html
@@ -16,6 +16,7 @@
         Author: Bitmovin
         URL:    https://www.youtube.com/embed/5eW_q0iy55U?start=19
         -->
+        
         <video id="video"
                loop
                crossorigin="anonymous"
@@ -24,7 +25,7 @@
         </video>
       </a-assets>
       <a-videosphere
-        rotation="0 -90 0" src="https://www.youtube.com/embed/5eW_q0iy55U?start=19""
+        rotation="0 -90 0" src="#video"
         play-on-click>
       </a-videosphere>
 
