--- a/examples/boilerplate/360-video/index.html
+++ b/examples/boilerplate/360-video/index.html
@@ -21,7 +21,7 @@
                loop
                crossorigin="anonymous"
                playsinline webkit-playsinline
-               src="https://www.youtube.com/embed/5eW_q0iy55U?start=19">
+               src="https://youtu.be/oMN7nH3r3Vw">
         </video>
       </a-assets>
       <a-videosphere
