--- a/examples/boilerplate/360-video/index.html
+++ b/examples/boilerplate/360-video/index.html
@@ -21,7 +21,7 @@
                loop
                crossorigin="anonymous"
                playsinline webkit-playsinline
-               src="https://youtu.be/oMN7nH3r3Vw">
+               src="Cline.mp4">
         </video>
       </a-assets>
       <a-videosphere
