--- a/examples/showcase/composite/index.html
+++ b/examples/showcase/composite/index.html
@@ -10,12 +10,12 @@
     <a-scene renderer="colorManagement: true;">
       <a-assets>
         <img id="lake" src="lake.jpg">
-        <img id="pdx" src="portland.png">
-        <a-asset-item id="sculpture" src="sculpture.glb"></a-asset-item>
+        <img id="pdx" src="logo.png">
+        <a-asset-item id="sculpture" src="lp-animation.glb"></a-asset-item>
       </a-assets>
 
       <a-sky src="#lake"></a-sky>
-      <a-gltf-model src="#sculpture" position="0 0 -6"></a-gltf-model>
+      <a-gltf-model src="#sculpture" position="0 0 2"></a-gltf-model>
       <a-image src="#pdx" width="10" height="5" position="-2 1.2 -3"
                scale="0.2 0.2 0.2"></a-image>
     </a-scene>
