--- a/examples/showcase/composite/index.html
+++ b/examples/showcase/composite/index.html
@@ -12,11 +12,13 @@
         <img id="lake" src="lake.jpg">
         <img id="pdx" src="logo.png">
         <a-asset-item id="sculpture" src="lp-animation.glb"></a-asset-item>
+        <a-asset-item id="jverne" src="nautilus.glb"></a-asset-item>
       </a-assets>
 
       <a-sky src="#lake"></a-sky>
       <a-gltf-model src="#sculpture" position="0 0 2"></a-gltf-model>
-      <a-image src="#pdx" width="10" height="5" position="-2 1.2 -3"
+       <a-gltf-model src="#jverne" position="0 0 -2"></a-gltf-model>
+      <a-image src="#pdx" width="10" height="5" position="-4 4 -4"
                scale="0.2 0.2 0.2"></a-image>
     </a-scene>
   </body>
