--- a/examples/showcase/composite/index.html
+++ b/examples/showcase/composite/index.html
@@ -16,8 +16,8 @@
       </a-assets>
 
       <a-sky src="#lake"></a-sky>
-      <a-gltf-model src="#sculpture" position="0 0 2"></a-gltf-model>
-       <a-gltf-model src="#jverne" position="0 0 -2"></a-gltf-model>
+      <a-gltf-model src="#sculpture" position="0 0 -6" scale="2 2 2"></a-gltf-model>
+       <a-gltf-model src="#jverne" position="0 0 0" scale="0.2 0.2 0.2"></a-gltf-model>
       <a-image src="#pdx" width="10" height="5" position="-4 4 -4"
                scale="0.2 0.2 0.2"></a-image>
     </a-scene>
