--- a/examples/showcase/composite/index.html
+++ b/examples/showcase/composite/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Composite</title>
+    <title>Portfolios lp Jules Verne Etaples sur mer</title>
     <meta name="description" content="Composite — A-Frame">
     <script src="../../../dist/aframe-master.js"></script>
   </head>
