--- a/examples/showcase/composite/index.html
+++ b/examples/showcase/composite/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Portfolios lp Jules Verne Etaples sur mer</title>
+    <title>Portfolios LP JULES VERNE ETAPLES </title>
     <meta name="description" content="Composite — A-Frame">
     <script src="../../../dist/aframe-master.js"></script>
   </head>
@@ -16,9 +16,9 @@
       </a-assets>
 
       <a-sky src="#lake"></a-sky>
-      <a-gltf-model src="#sculpture" position="0 0 -4" scale="2 2 2"></a-gltf-model>
+      <a-gltf-model src="#sculpture" position="0 0 0" scale="2 2 2"></a-gltf-model>
        <a-gltf-model src="#jverne" position="0 0 0" scale="0.3 0.3 0.3" rotation="0 0 0" animation="property: rotation; to: 0 360 0; loop: true; dur: 10000"></a-gltf-model>
-      <a-image src="#pdx" width="10" height="5" position="-4 0 0"
+      <a-image src="#pdx" width="10" height="5" position="0 0 0"
                scale="0.2 0.2 0.2"></a-image>
     </a-scene>
   </body>
