--- a/examples/showcase/composite/index.html
+++ b/examples/showcase/composite/index.html
@@ -9,7 +9,7 @@
   <body>
     <a-scene renderer="colorManagement: true;">
       <a-assets>
-        <img id="lake" src="sky.jpg">
+        <img id="lake" src="lake.jpg">
         <img id="pdx" src="logo.png">
         <a-asset-item id="sculpture" src="lp-animation.glb"></a-asset-item>
         <a-asset-item id="jverne" src="nautilus.glb"></a-asset-item>
