--- a/examples/showcase/composite/index.html
+++ b/examples/showcase/composite/index.html
@@ -12,11 +12,11 @@
         <img id="lake" src="lake.jpg">
         <img id="pdx" src="logo.png">
         <a-asset-item id="sculpture" src="lp-animation.glb"></a-asset-item>
-        <a-asset-item id="jverne" src="nautilus.glb"></a-asset-item>
+        <a-asset-item id="jverne" src="sculpture.glb"></a-asset-item>
       </a-assets>
 
       <a-sky src="#lake"></a-sky>
-      <a-gltf-model src="#sculpture" position="0 0 -5" scale="2 2 2" rotation="0 0 0" animation="property: rotation; to: 0 360 0; loop: true; dur: 15000"></a-gltf-model>
+      <a-gltf-model src="#sculpture" position="0 2 -5" scale="2 2 2" rotation="0 0 0" animation="property: rotation; to: 0 360 0; loop: true; dur: 15000"></a-gltf-model>
        <a-gltf-model src="#jverne" position="0 0 -5" scale="0.3 0.3 0.3" rotation="0 90 0" ></a-gltf-model>
       <a-image src="#pdx" width="10" height="5" position="4 4 -4"
                scale="0.2 0.2 0.2"></a-image>
