--- a/examples/showcase/composite/index.html
+++ b/examples/showcase/composite/index.html
@@ -20,7 +20,7 @@
       <a-gltf-model src="#jverne" position="0 0 -5" scale="0.4 0.4 0.4" rotation="0 90 0" ></a-gltf-model>
       <a-image src="#pdx" width="10" height="5" position="4 4 -4" scale="0.2 0.2 0.2"  
       animation="property: position; to: -6 2.5 -2; dur: 25000; delay: 500; easing: linear; loop: true"
-      animation="property: rotation; to: 0 360 0; loop: true; dur: 15000"
+      animation_2="property: rotation; to: 0 360 0; loop: true; dur: 15000"
        ></a-image>
     </a-scene>
   </body>
