--- a/examples/showcase/composite/index.html
+++ b/examples/showcase/composite/index.html
@@ -5,12 +5,26 @@
     <title>Portfolios LP JULES VERNE ETAPLES </title>
     <meta name="description" content="Composite — A-Frame">
     <script src="../../../dist/aframe-master.js"></script>
+    <script src="js/aframe-master-v1.3.0.min.js"></script>
+	  <script src="js/aframe-environment-component.min.js"></script>
+	  <script src="js/extended-wasd-controls.js"></script>
+	  <script src="js/parser.js"></script>
+	  <script src="js/aframe-parametric-curve.js"></script>
+	  <script src="js/aframe-tube-geometry.js"></script>
+	  <script src="js/aframe-curve-follow.js"></script>
   </head>
   <body>
     <a-scene renderer="colorManagement: true;">
       <a-assets>
         <img id="lake" src="lake.jpg">
         <img id="pdx" src="logo.png">
+        <a-entity id="path"
+		                parametric-curve="xyzFunctions: 2*cos(t), 0.5*cos(3*t) + 2, 2*sin(t);  tRange: 0, 6.283;">
+	      </a-entity>
+        <a-entity 
+			          tube-geometry="curveData: #path; type: parametric-curve; 
+						   tubeSegments: 200; radius: 0.004; tubeColor: yellow;">
+		    </a-entity>
         <a-asset-item id="sculpture" src="lp-animation.glb"></a-asset-item>
         <a-asset-item id="jverne" src="sculpture.glb"></a-asset-item>
       </a-assets>
@@ -19,7 +33,7 @@
       <a-gltf-model src="#sculpture" position="0 -1 -5" scale="3 3 3" rotation="0 0 0" animation="property: rotation; to: 0 360 0; loop: true; dur: 15000"></a-gltf-model>
       <a-gltf-model src="#jverne" position="0 -2 -5" scale="0.4 0.4 0.4" rotation="0 90 0" ></a-gltf-model>
       <a-image src="#pdx" width="10" height="5" position="-6 -4 -20" scale="0.2 0.2 0.2"  
-      animation="property: position; to: 6 4 2; dur: 25000; delay: 500; easing: linear; loop: true"
+       curve-follow="curveData: #path; type: parametric-curve; duration: 20; loop: true;">"
       ></a-image>
     </a-scene>
   </body>
