--- a/examples/showcase/composite/index.html
+++ b/examples/showcase/composite/index.html
@@ -29,7 +29,7 @@
       </a-entity>
        
       <a-entity 
-	  curve-geometry="curveData: #helix; type: parametric-curve;  totalPoints: 10000; lineColor: black;" position="-2 0 -3" scale="7 7 7">
+	  curve-geometry="curveData: #helix; type: parametric-curve;  totalPoints: 10000; lineColor: black; radius: 0.4"  rposition="-2 0 -3" scale="7 7 7">
       </a-entity>
 
       <a-sky 
