--- a/examples/showcase/composite/index.html
+++ b/examples/showcase/composite/index.html
@@ -29,7 +29,7 @@
       </a-entity>
        
       <a-entity 
-	  curve-geometry="curveData: #helix; type: parametric-curve;  totalPoints: 10000; lineColor: black; radius: 0.4"  rposition="-5 0 -5" scale="4 4 4">
+	  curve-geometry="curveData: #helix; type: parametric-curve;  totalPoints: 10000; lineColor: black; radius: 2"  position="-5 0 -5" scale="4 4 4">
       </a-entity>
 
       <a-sky 
