--- a/examples/test/geometry-gallery/index.html
+++ b/examples/test/geometry-gallery/index.html
@@ -7,7 +7,7 @@
     <script src="../../../dist/aframe-master.js"></script>
   </head>
   <body>
-    <a-scene background="color: #112" stats>
+    <a-scene background="color: #112">
       <a-assets>
         <!-- Geometry mixins. -->
         <a-mixin id="box"
