--- a/examples/test/geometry-gallery/index.html
+++ b/examples/test/geometry-gallery/index.html
@@ -38,11 +38,13 @@
 
         <!-- Layout mixins. -->
         <a-mixin id="column"
-                  geometry="primitive: box; depth: .75; height: 1.2; width: .75"
-                  material="color: #FFF" position="0 .6 0"></a-mixin>
+                  geometry="primitive: cylinder; radius: 0.5; height: 1.2;
+                           segmentsRadial: 50; segmentsHeight: 50:
+                           openEnded: true; thetaStart: 0; thetaLength: 360"
+                  material="color: #B2B484 " position="0 .6 0"></a-mixin>
         <a-mixin id="column-bottom" geometry="primitive: box; depth: 1;
                                               height: .1; width: 1;"
-                 material="color: #FFF" position="0 .1 0">
+                 material="#B2B484 " position="0 .1 0">
         </a-mixin>
         <a-mixin id="column-light" light="type: point; intensity: 0.5;
                                           distance: 5;"
