--- a/examples/test/geometry-gallery/index.html
+++ b/examples/test/geometry-gallery/index.html
@@ -38,9 +38,8 @@
 
         <!-- Layout mixins. -->
         <a-mixin id="column"
-                  geometry="primitive: cylinder; radius: 0.5; height: 1.2;
-                           segmentsRadial: 50; segmentsHeight: 50:
-                           openEnded: true; thetaStart: 0; thetaLength: 360"
+                  geometry=  geometry="primitive: box; depth: .75; height: 1.2; width: .75"
+                  material="color:  #B2B484" position="0 .6 0"></a-mixin>
                   material="color: #B2B484 " position="0 .6 0"></a-mixin>
         <a-mixin id="column-bottom" geometry="primitive: box; depth: 1;
                                               height: .1; width: 1;"
