--- a/examples/test/geometry-gallery/index.html
+++ b/examples/test/geometry-gallery/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <a-scene  environment="groundColor:  #f6d7b0;  groundColor2:  #f2d2a9;">
-      <a-sky color="#ECECEC" material="" geometry=""></a-sky>
+     
       <a-assets>
         <!-- Geometry mixins. -->
         <a-mixin id="box"
@@ -37,13 +37,12 @@
         </a-mixin>
 
         <!-- Layout mixins. -->
-        <a-mixin id="column"
-                  geometry=  geometry="primitive: box; depth: .75; height: 1.2; width: .75"
-                  material="color:  #B2B484" position="0 .6 0"></a-mixin>
-                  material="color: #B2B484 " position="0 .6 0"></a-mixin>
+       <a-mixin id="column"
+                  geometry="primitive: box; depth: .75; height: 1.2; width: .75"
+                  material="color: #FFF" position="0 .6 0"></a-mixin>
         <a-mixin id="column-bottom" geometry="primitive: box; depth: 1;
                                               height: .1; width: 1;"
-                 material="#B2B484 " position="0 .1 0">
+                 material="color: #FFF" position="0 .1 0">
         </a-mixin>
         <a-mixin id="column-light" light="type: point; intensity: 0.5;
                                           distance: 5;"
