--- a/examples/test/geometry-gallery/index.html
+++ b/examples/test/geometry-gallery/index.html
@@ -39,10 +39,10 @@
         <!-- Layout mixins. -->
        <a-mixin id="column"
                   geometry="primitive: box; depth: .75; height: 1.2; width: .75"
-                  material="color: #FFF" position="0 .6 0"></a-mixin>
+                  material="color: #464E81" position="0 .6 0"></a-mixin>
         <a-mixin id="column-bottom" geometry="primitive: box; depth: 1;
                                               height: .1; width: 1;"
-                 material="color: #FFF" position="0 .1 0">
+                 material="color: #464E81" position="0 .1 0">
         </a-mixin>
         <a-mixin id="column-light" light="type: point; intensity: 0.5;
                                           distance: 5;"
