--- a/examples/test/video/index.html
+++ b/examples/test/video/index.html
@@ -31,7 +31,7 @@
                 geometry="primitive: plane; width: 320; height: 180;"
                 position="0 60 -250"
                 rotation="0 +25 0"
-               
+                play-on-click
                 visible="false">
       </a-entity>
 
