--- a/examples/showcase/curved-mockups/index.html
+++ b/examples/showcase/curved-mockups/index.html
@@ -25,7 +25,8 @@
       <a-curvedimage src="#ui2" radius="5.7" theta-length="70" height="3.02"
                      rotation="0 -280 0" position="0 4 0" scale="1 1 1"></a-curvedimage>
 
-      <a-image position="0 -5 0" src="#shadow2" rotation="-90 0 0" scale="6 6 6"></a-image>
+      <a-curvedimage src="#shadow2" radius="5.7" theta-length="70" height="3.02" 
+                     rotation="0 180 0" position="0 -5 0" scale="1 1 1"></a-curvedimage>
       <a-entity position="0 0 1.5">
         <a-camera></a-camera>
       </a-entity>
