--- a/examples/test/layer/index.html
+++ b/examples/test/layer/index.html
@@ -11,7 +11,8 @@
     <script src="button.js"></script>
   </head>
   <body>
-    <a-scene environment="preset: forest" raycaster="objects: [button];" cursor="rayOrigin: mouse">
+    <a-scene   environment="groundColor:  #f6d7b0;  groundColor2:  #f2d2a9; raycaster="objects: [button];" cursor="rayOrigin: mouse">
+        <a-sky color="#ECECEC" material="" geometry=""></a-sky>                                                                                                                              
       <a-assets>
         
         <video id="bunny" autoplay preload="auto" loop crossorigin="anonymous" width="1920" height="1080">
