--- a/examples/boilerplate/3d-model/index.html
+++ b/examples/boilerplate/3d-model/index.html
@@ -9,11 +9,11 @@
   <body>
     <a-scene background="color: #ECECEC">
       <a-assets>
-        <a-asset-item id="tree" src="../../assets/models/tree2.glb"></a-asset-item>
+        <a-asset-item id="tree" src="tree2.glb"></a-asset-item>
       </a-assets>
 
-      <a-gltf-model src="#tree" rotation="0 45 0"></a-gltf-model>
-      <a-entity position="0 0 4">
+      <a-gltf-model src="#tree" rotation="0 0 0"scale"1 1 1"></a-gltf-model>
+      <a-entity position="0 0 0" >
         <a-camera></a-camera>
       </a-entity>
     </a-scene>
