--- a/examples/boilerplate/3d-model/index.html
+++ b/examples/boilerplate/3d-model/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>3D Model (glTF)</title>
+    <title>Chantier</title>
     <meta name="description" content="3D Model (glTF) — A-Frame">
     <script src="../../../dist/aframe-master.js"></script>
   </head>
