--- a/examples/test/embedded/index.html
+++ b/examples/test/embedded/index.html
@@ -14,14 +14,7 @@
   </head>
   <body>
     <h2>Through the looking glass.</h2>
-    <p>Twas brillig, and the slithy toves
-      Did gyre and gimble in the wabe:
-All mimsy were the borogoves,
-      And the mome raths outgrabe.
-“Beware the Jabberwock, my son!
-      The jaws that bite, the claws that catch!
-Beware the Jubjub bird, and shun
-      The frumious Bandersnatch!
+    <p>Twas
     </p>
 
     <a-scene background="color: #ECECEC" embedded>
