--- a/examples/test/animation/index.html
+++ b/examples/test/animation/index.html
@@ -7,7 +7,7 @@
     <script src="../../../dist/aframe-master.js"></script>
   </head>
   <body>
-    <a-scene background="color: #333" stats>
+    <a-scene background="color: #0d0d0d" stats>
       <a-assets>
         <a-mixin id="planet" geometry="primitive: sphere; radius: 0.5"></a-mixin>
         <a-mixin id="orbitAnimation" animation="property: object3D.rotation.y; to: 360; loop: true; easing: linear; dur: 3000"></a-mixin>
