--- a/examples/test/animation/index.html
+++ b/examples/test/animation/index.html
@@ -15,7 +15,7 @@
         <img id="sun" src="sun.jpg">
       </a-assets>
 
-      <!--<a-entity position="0 0 6">
+      <!--a-entity position="0 0 6">
         <a-camera wasd-controls-enabled="false"></a-camera>
       </a-entity>-->
 
