--- a/examples/test/animation/index.html
+++ b/examples/test/animation/index.html
@@ -16,7 +16,7 @@
       </a-assets>
 
       <a-entity position="0 0 6">
-        <a-camera wasd-controls-enabled="false"></a-camera>
+        <a-camera wasd-controls-enabled="true"></a-camera>
       </a-entity>
 
       <a-entity position="0 0 -5">
