--- a/examples/boilerplate/3d-model/index.html
+++ b/examples/boilerplate/3d-model/index.html
@@ -9,7 +9,7 @@
   <body>
     <a-scene background="color: #ECECEC">
       <a-assets>
-        <a-asset-item id="tree" src="tree2.glb"></a-asset-item>
+        <a-asset-item id="tree" src="alienware_18_gaming_laptop.glb"></a-asset-item>
       </a-assets>
 
       <a-gltf-model src="#tree" rotation="0 0 0"scale"1 1 1"></a-gltf-model>
